# RathEngine

./: CMakeLists.txt  codebase.txt  vcpkg.json
shaders/: triangle.frag  triangle.vert
src/: main.cpp
src/RathEngine/Application/: Application.cpp  Application.h
src/RathEngine/Core/: Assert.h  Config.h.in  Input.cpp  Input.h  KeyCodes.h  Types.h
src/RathEngine/Core/Events/: EventBus.h
src/RathEngine/Core/JobSystem/: JobSystem.cpp  JobSystem.h
src/RathEngine/Core/Memory/: Allocator.h  LinearAllocator.h  PoolAllocator.h
src/RathEngine/Core/Module/: IModule.h
src/RathEngine/Platform/: GlfwWindow.cpp  GlfwWindow.h  IWindow.h
src/RathEngine/Renderer/: Mesh.cpp  Mesh.h
src/RathEngine/Renderer/RHI/: IRHIContext.h  RHITypes.h
src/RathEngine/Renderer/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanResourceManager.cpp  VulkanResourceManager.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/RathEngine/Scene/: Camera.cpp  Camera.h  Transform.h
